# files

./: .cursorrules  .gitignore  .windsurfrules  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  justfile
ai-services/: configure-agents.bat  configure-agents.sh  gemini-context.json  init_db.py  run.bat  run.sh  start.bat  start.sh
docs/: agentic-swarm-setup.md  comparison.md  gpu-passthrough.md  lsfs-optimized-setup.md  persistence.md  quickstart.md  updates.md  verification.md
got-push/: CHANGELOG.md  CONTRIBUTING.md
iso-profile/: packages.x86_64  profiledef.sh
iso-profile-arm64/: packages.aarch64  profiledef.sh
iso-profile-arm64/airootfs/usr/share/ash-dev/templates/python/: pyproject.toml
iso-profile-arm64/airootfs/usr/share/ash-dev/templates/python/src/: main.py
iso-profile-arm64/airootfs/usr/share/ash-dev/templates/python/src/core/: config.py
iso-profile-arm64/airootfs/usr/share/ash-dev/templates/python/tests/: test_api.py
iso-profile/airootfs/usr/share/ash-dev/templates/ai/: README.md  pyproject.toml
iso-profile/airootfs/usr/share/ash-dev/templates/ai/.devcontainer/: setup.sh
iso-profile/airootfs/usr/share/ash-dev/templates/ai/src/: llm.py  vector_store.py
iso-profile/airootfs/usr/share/ash-dev/templates/data/: README.md  pyproject.toml
iso-profile/airootfs/usr/share/ash-dev/templates/data/.devcontainer/: setup.sh
iso-profile/airootfs/usr/share/ash-dev/templates/rust/: Cargo.toml  README.md
iso-profile/airootfs/usr/share/ash-dev/templates/rust/.devcontainer/: setup.sh
iso-profile/airootfs/usr/share/ash-dev/templates/rust/src/: lib.rs
landing-page/: astro.config.mjs  package-lock.json  package.json
packer/: ash-iso.pkr.hcl  aws-ami.pkr.hcl  azure-image.pkr.hcl  gcp-image.pkr.hcl  vagrant-box.pkr.hcl
scripts/: ash-bootstrap.sh  build-all-formats.sh  build-iso.sh  cross-build-arm64.sh  deploy.sh  distribute.sh  fix-all.sh  fix-clipboard.sh  instant-launcher.sh  push-to-cloud.sh  setup-and-test.sh  sign-provenance.sh  test-iso.sh  ultimate-fix-v2.sh  ultimate-fix.sh  verify-ash.sh
(+244 files in other folders)
