[project]
name = "{{project_name}}"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.1.0",
    "qdrant-client>=1.9.0",
    "langchain>=0.2.0",
    "langchain-ollama>=0.1.0",
    "instructor>=1.0.0",
    "pydantic>=2.0",
    "openai>=1.0",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio",
    "ruff>=0.3.0",
]
