[project]
name = "{{project_name}}"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "jupyterlab>=4.0",
    "polars>=1.0",
    "plotly>=5.20.0",
    "mlx>=0.10.0",
    "scikit-learn>=1.5.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3.0",
]
